<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/walmart_logo"
        android:id="@+id/image"
        android:adjustViewBounds="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ImageView>
    <TextView

        android:gravity="center"
        android:text="@string/sign"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/image"
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="4dp"
        android:id="@+id/email_layout"
        app:hintAnimationEnabled="true"
        app:helperText=""
        app:hintEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/title1"
        android:layout_width="0dp"

        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/email_address_is_required"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="4dp"
        android:id="@+id/password_layout"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        android:layout_width="0dp"

        android:layout_height="wrap_content">
        <EditText
            android:hint="Password"
            android:inputType="textEmailAddress"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:clickable="true"
        android:autoLink="all"
        android:onClick="forgetPassword"
        android:id="@+id/forgotpassword"
        android:textSize="16sp"
        android:padding="4dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/password_layout"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/forgotpassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        app:layout_constrainedHeight="true"
        android:layout_width="0dp"
        android:layout_marginBottom="10dp"
        android:gravity="center|bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:layout_height="match_parent">
        <Button
            android:onClick="signIn"
            android:id="@+id/sign_in"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
        <LinearLayout
            android:gravity="center"
            android:layout_margin="8dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_margin="2dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="1dp">

            </View>
            <TextView
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_margin="2dp"
                android:textSize="16sp"
                android:text="@string/don_t_have_an_account"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

            </TextView>
            <View
                android:layout_margin="2dp"
                android:background="@android:color/darker_gray"
                android:layout_weight="0.2"
                android:layout_width="0dp"
                android:layout_height="1dp">

            </View>
        </LinearLayout>
        <Button
            android:onClick="createAccount"
            android:id="@+id/create_new_acoount"
            android:layout_margin="8dp"
            android:textAllCaps="false"
            android:text="Create new account"
            android:textColor="@color/purple_500"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>